WIP for #630